# switchboard-test

./: Anchor.toml  SWITCHBOARD.md  index.ts  package.json  read-feed.ts
programs/btc-reader/: Cargo.toml
programs/btc-reader/src/: lib.rs
